01-DevOps-Projects/microservices-ecommerce-project/k8s/base/user-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: ecommerce
spec:
  selector:
    app: user-service
  ports:
  - port: 8002
    targetPort: 8002
    protocol: TCP
  type: ClusterIP
